Prevent crash with blank editor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,6 @@
 
     <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
     <string name="empty_view_subtitle_text">Get started by adding a pet</string>
+    <string name="updated_pet_toast">Pet Updated!</string>
+    <string name="pet_not_updated_toast">No changes were made to the pet.</string>
 </resources>
